# new-peg

./: CMakeLists.txt  README.md  app.cpp  switcher.cpp  switcher.h
modelview/6_treeview/: mainwindow.cpp
sharedmemory/: dialog.cpp  dialog.h
